--- a/Makefile.toml
+++ b/Makefile.toml
@@ -62,6 +62,21 @@ install_crate = { crate_name = "cargo-component", version = "0.20.0" }
 command = "cargo-component"
 args = ["build", "-p", "golem-llm-openrouter", "--no-default-features"]
 
+[tasks.build-neo4j]
+install_crate = { crate_name = "cargo-component", version = "0.20.0" }
+command = "cargo-component"
+args = ["build", "-p", "golem-graph-neo4j"]
+
+[tasks.build-arangodb]
+install_crate = { crate_name = "cargo-component", version = "0.20.0" }
+command = "cargo-component"
+args = ["build", "-p", "golem-graph-arangodb"]
+
+[tasks.build-janusgraph]
+install_crate = { crate_name = "cargo-component", version = "0.20.0" }
+command = "cargo-component"
+args = ["build", "-p", "golem-graph-janusgraph"]
+
 [tasks.build]
 dependencies = [
     "build-anthropic",
@@ -69,6 +84,9 @@ dependencies = [
     "build-openai",
     "build-openrouter",
     "build-ollama",
+    "build-neo4j",
+    "build-arangodb",
+    "build-janusgraph"
 ]
 
 [tasks.build-portable]
