--- a/graph-arangodb/Cargo.toml
+++ b/graph-arangodb/Cargo.toml
@@ -24,8 +24,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
-reqwest =  { workspace = true }
-futures = "0.3"
+ureq = "2.9"
 chrono = { version = "0.4", features = ["serde"] }
 
 [package.metadata.component]
