--- a/graph-neo4j/Cargo.toml
+++ b/graph-neo4j/Cargo.toml
@@ -24,9 +24,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
-reqwest =  { workspace = true }
+ureq = "2.9"
 futures = "0.3"
-
+reqwest = { workspace = true, features = ["json"] }
 
 [package.metadata.component]
 package = "golem:graph-neo4j"
