--- a/test graph/components-rust/test-graph/golem.yaml
+++ b/test graph/components-rust/test-graph/golem.yaml
@@ -6,273 +6,169 @@
 # See https://learn.golem.cloud/docs/app-manifest#field-reference for field reference
 
 components:
-  test:llm:
+  test:graph:
     profiles:
       # DEBUG PROFILES
-      openai-debug:
+      neo4j-debug:
         files:
           - sourcePath: ../../data/cat.png
             targetPath: /data/cat.png
             permissions: read-only
         build:
-          - command: cargo component build --no-default-features --features openai
+          - command: cargo component build --no-default-features --features neo4j
             sources:
               - src
               - wit-generated
               - ../../common-rust
             targets:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_openai.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
+              - ../../target/wasm32-wasip1/debug/test_graph.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_graph_neo4j.wasm ../../target/wasm32-wasip1/debug/test_graph.wasm -o ../../target/wasm32-wasip1/debug/test_neo4j_plugged.wasm
             sources:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_openai.wasm
+              - ../../target/wasm32-wasip1/debug/test_graph.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_graph_neo4j.wasm
             targets:
-              - ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
+              - ../../target/wasm32-wasip1/debug/test_neo4j_plugged.wasm
         sourceWit: wit
         generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/debug/test_openai_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_openai_debug.wasm
+        componentWasm: ../../target/wasm32-wasip1/debug/test_neo4j_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_neo4j_debug.wasm
         clean:
           - src/bindings.rs
 
-      anthropic-debug:
+      arangodb-debug:
         files:
           - sourcePath: ../../data/cat.png
             targetPath: /data/cat.png
             permissions: read-only
         build:
-          - command: cargo component build --no-default-features --features anthropic
+          - command: cargo component build --no-default-features --features arangodb
             sources:
               - src
               - wit-generated
               - ../../common-rust
             targets:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_anthropic.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_anthropic_plugged.wasm
+              - ../../target/wasm32-wasip1/debug/test_graph.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_graph_arangodb.wasm ../../target/wasm32-wasip1/debug/test_graph.wasm -o ../../target/wasm32-wasip1/debug/test_arangodb_plugged.wasm
             sources:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_anthropic.wasm
+              - ../../target/wasm32-wasip1/debug/test_graph.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_graph_arangodb.wasm
             targets:
-              - ../../target/wasm32-wasip1/debug/test_anthropic_plugged.wasm
+              - ../../target/wasm32-wasip1/debug/test_arangodb_plugged.wasm
         sourceWit: wit
         generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/debug/test_anthropic_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_anthropic_debug.wasm
+        componentWasm: ../../target/wasm32-wasip1/debug/test_arangodb_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_arangodb_debug.wasm
         clean:
           - src/bindings.rs
 
-      grok-debug:
+      janusgraph-debug:
         files:
           - sourcePath: ../../data/cat.png
             targetPath: /data/cat.png
             permissions: read-only
         build:
-          - command: cargo component build --no-default-features --features grok
+          - command: cargo component build --no-default-features --features janusgraph
             sources:
               - src
               - wit-generated
               - ../../common-rust
             targets:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_grok.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_grok_plugged.wasm
+              - ../../target/wasm32-wasip1/debug/test_graph.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_graph_janusgraph.wasm ../../target/wasm32-wasip1/debug/test_graph.wasm -o ../../target/wasm32-wasip1/debug/test_janusgraph_plugged.wasm
             sources:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_grok.wasm
+              - ../../target/wasm32-wasip1/debug/test_graph.wasm
+              - ../../../target/wasm32-wasip1/debug/golem_graph_janusgraph.wasm
             targets:
-              - ../../target/wasm32-wasip1/debug/test_grok_plugged.wasm
+              - ../../target/wasm32-wasip1/debug/test_janusgraph_plugged.wasm
         sourceWit: wit
         generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/debug/test_grok_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_grok_debug.wasm
-        clean:
-          - src/bindings.rs
-
-      openrouter-debug:
-        files:
-          - sourcePath: ../../data/cat.png
-            targetPath: /data/cat.png
-            permissions: read-only
-        build:
-          - command: cargo component build --no-default-features --features openrouter
-            sources:
-              - src
-              - wit-generated
-              - ../../common-rust
-            targets:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_openrouter.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_openrouter_plugged.wasm
-            sources:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_openrouter.wasm
-            targets:
-              - ../../target/wasm32-wasip1/debug/test_openrouter_plugged.wasm
-        sourceWit: wit
-        generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/debug/test_openrouter_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_openrouter_debug.wasm
-        clean:
-          - src/bindings.rs
-          
-      ollama-debug:
-        files:
-        - sourcePath: ../../data/cat.png
-          targetPath: /data/cat.png
-          permissions: read-only
-        build:
-          - command: cargo component build --no-default-features --features ollama
-            sources:
-              - src
-              - wit-generated
-              - ../../common-rust
-            targets:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm ../../target/wasm32-wasip1/debug/test_llm.wasm -o ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
-            sources:
-              - ../../target/wasm32-wasip1/debug/test_llm.wasm
-              - ../../../target/wasm32-wasip1/debug/golem_llm_ollama.wasm
-            targets:
-              - ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
-        sourceWit: wit
-        generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/debug/test_ollama_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_ollama_debug.wasm
+        componentWasm: ../../target/wasm32-wasip1/debug/test_janusgraph_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_janusgraph_debug.wasm
         clean:
           - src/bindings.rs
 
       # RELEASE PROFILES
-      openai-release:
+      neo4j-release:
         files:
           - sourcePath: ../../data/cat.png
             targetPath: /data/cat.png
             permissions: read-only
         build:
-          - command: cargo component build --release --no-default-features --features openai
+          - command: cargo component build --release --no-default-features --features neo4j
             sources:
               - src
               - wit-generated
               - ../../common-rust
             targets:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_openai.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_openai_plugged.wasm
+              - ../../target/wasm32-wasip1/release/test_graph.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_graph_neo4j.wasm ../../target/wasm32-wasip1/release/test_graph.wasm -o ../../target/wasm32-wasip1/release/test_neo4j_plugged.wasm
             sources:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_openai.wasm
+              - ../../target/wasm32-wasip1/release/test_graph.wasm
+              - ../../../target/wasm32-wasip1/release/golem_graph_neo4j.wasm
             targets:
-              - ../../target/wasm32-wasip1/release/test_openai_plugged.wasm
+              - ../../target/wasm32-wasip1/release/test_neo4j_plugged.wasm
         sourceWit: wit
         generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/release/test_openai_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_openai_release.wasm
+        componentWasm: ../../target/wasm32-wasip1/release/test_neo4j_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_neo4j_release.wasm
         clean:
           - src/bindings.rs
 
-      anthropic-release:
+      arangodb-release:
         files:
           - sourcePath: ../../data/cat.png
             targetPath: /data/cat.png
             permissions: read-only
         build:
-          - command: cargo component build --release --no-default-features --features anthropic
+          - command: cargo component build --release --no-default-features --features arangodb
             sources:
               - src
               - wit-generated
               - ../../common-rust
             targets:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_anthropic.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_anthropic_plugged.wasm
+              - ../../target/wasm32-wasip1/release/test_graph.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_graph_arangodb.wasm ../../target/wasm32-wasip1/release/test_graph.wasm -o ../../target/wasm32-wasip1/release/test_arangodb_plugged.wasm
             sources:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_anthropic.wasm
+              - ../../target/wasm32-wasip1/release/test_graph.wasm
+              - ../../../target/wasm32-wasip1/release/golem_graph_arangodb.wasm
             targets:
-              - ../../target/wasm32-wasip1/release/test_anthropic_plugged.wasm
+              - ../../target/wasm32-wasip1/release/test_arangodb_plugged.wasm
         sourceWit: wit
         generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/release/test_anthropic_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_anthropic_release.wasm
+        componentWasm: ../../target/wasm32-wasip1/release/test_arangodb_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_arangodb_release.wasm
         clean:
           - src/bindings.rs
 
-      grok-release:
+      janusgraph-release:
         files:
           - sourcePath: ../../data/cat.png
             targetPath: /data/cat.png
             permissions: read-only
         build:
-          - command: cargo component build --release --no-default-features --features grok
+          - command: cargo component build --release --no-default-features --features janusgraph
             sources:
               - src
               - wit-generated
               - ../../common-rust
             targets:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_grok.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_grok_plugged.wasm
+              - ../../target/wasm32-wasip1/release/test_graph.wasm
+          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_graph_janusgraph.wasm ../../target/wasm32-wasip1/release/test_graph.wasm -o ../../target/wasm32-wasip1/release/test_janusgraph_plugged.wasm
             sources:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_grok.wasm
+              - ../../target/wasm32-wasip1/release/test_graph.wasm
+              - ../../../target/wasm32-wasip1/release/golem_graph_janusgraph.wasm
             targets:
-              - ../../target/wasm32-wasip1/release/test_grok_plugged.wasm
+              - ../../target/wasm32-wasip1/release/test_janusgraph_plugged.wasm
         sourceWit: wit
         generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/release/test_grok_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_grok_release.wasm
+        componentWasm: ../../target/wasm32-wasip1/release/test_janusgraph_plugged.wasm
+        linkedWasm: ../../golem-temp/components/test_janusgraph_release.wasm
         clean:
           - src/bindings.rs
 
-      openrouter-release:
-        files:
-          - sourcePath: ../../data/cat.png
-            targetPath: /data/cat.png
-            permissions: read-only
-        build:
-          - command: cargo component build --release --no-default-features --features openrouter
-            sources:
-              - src
-              - wit-generated
-              - ../../common-rust
-            targets:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_openrouter.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_openrouter_plugged.wasm
-            sources:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_openrouter.wasm
-            targets:
-              - ../../target/wasm32-wasip1/release/test_openrouter_plugged.wasm
-        sourceWit: wit
-        generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/release/test_openrouter_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_openrouter_release.wasm
-        clean:
-          - src/bindings.rs
-
-      ollama-release:
-        files:
-        - sourcePath: ../../data/cat.png
-          targetPath: /data/cat.png
-          permissions: read-only
-        build:
-          - command: cargo component build --release --no-default-features --features ollama
-            sources:
-              - src
-              - wit-generated
-              - ../../common-rust
-            targets:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-          - command: wac plug --plug ../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm ../../target/wasm32-wasip1/release/test_llm.wasm -o ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
-            sources:
-              - ../../target/wasm32-wasip1/release/test_llm.wasm
-              - ../../../target/wasm32-wasip1/release/golem_llm_ollama.wasm
-            targets:
-              - ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
-        sourceWit: wit
-        generatedWit: wit-generated
-        componentWasm: ../../target/wasm32-wasip1/release/test_ollama_plugged.wasm
-        linkedWasm: ../../golem-temp/components/test_ollama_release.wasm
-        clean:
-          - src/bindings.rs
-
-    defaultProfile: openai-debug
+    defaultProfile: neo4j-debug
 
 dependencies:
-  test:llm:
+  test:graph:
     - target: test:helper
       type: wasm-rpc
