--- a/graph-janusgraph/Cargo.toml
+++ b/graph-janusgraph/Cargo.toml
@@ -24,8 +24,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
-reqwest = { workspace = true, features = ["json"] }
-ureq = "2.9"
+reqwest = { workspace = true}
 uuid = "1.17.0"
 futures = "0.3"
 dotenvy = "0.15.7"
