--- a/graph-neo4j/Cargo.toml
+++ b/graph-neo4j/Cargo.toml
@@ -24,9 +24,8 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 base64 = { workspace = true }
-ureq = "2.9"
 futures = "0.3"
-reqwest = { workspace = true, features = ["json"] }
+reqwest = { workspace = true}
 
 [package.metadata.component]
 package = "golem:graph-neo4j"
@@ -49,4 +48,4 @@ path = "wit"
 
 [package.metadata.component.target.dependencies]
 "golem:graph" = { path = "wit/deps/golem-graph" }
-"wasi:io" = { path = "wit/deps/wasi:io"} 
+"wasi:io" = { path = "wit/deps/wasi:io"}
