--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,6 @@ members = [
     "llm/ollama",
     "llm/openai",
     "llm/openrouter",
-    "graph",
-    "graph-neo4j",
-    "graph-arangodb",
-    "graph-janusgraph"
 ]
 
 [profile.release]
@@ -22,6 +18,7 @@ opt-level = 's'
 [workspace.dependencies]
 golem-rust = "1.6.0"
 log = "0.4.27"
+golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
 reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
     "json",
 ] }
