refactored according to new project structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ members = [
     "llm/ollama",
     "llm/openai",
     "llm/openrouter",
+    "graph/graph",
+    "graph/arangodb",
+    "graph/janusgraph",
+    "graph/neo4j"
 ]
 
 [profile.release]
@@ -19,6 +23,7 @@ opt-level = 's'
 golem-rust = "1.6.0"
 log = "0.4.27"
 golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
+golem-graph = { path = "graph/graph", version = "0.0.0", default-features = false }
 reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
     "json",
 ] }
