--- a/Makefile.toml
+++ b/Makefile.toml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://json.schemastore.org/cargo-make
 [config]
 default_to_workspace = false
 skip_core_tasks = true
