feat: improved testability

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ golem-rust = "1.6.0"
 log = "0.4.27"
 golem-llm = { path = "llm/llm", version = "0.0.0", default-features = false }
 golem-stt = { path = "stt/stt", version = "0.0.0" }
-reqwest = { git = "https://github.com/golemcloud/reqwest", rev = "a2ed3d983e868976c3453814f981015a19727422", features = [
+reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-may-2025", features = [
     "json",
     "multipart",
 ] }
