--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -14,3 +14,9 @@ crate-type = ["rlib"]
 [dependencies]
 golem-rust = { workspace = true }
 wit-bindgen = { version = "0.40.0" }
+bytes = "1.2"
+reqwest = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+
+derive_more = { version = "2.0.1", features = ["from"] }
