--- a/graph/graph/Cargo.toml
+++ b/graph/graph/Cargo.toml
@@ -15,6 +15,7 @@ crate-type = ["rlib"]
 golem-rust = { workspace = true }
 log = { workspace = true }
 serde_json = { workspace = true }
+regex = { version = "1.10" }
 mime = "0.3.17"
 nom = { version = "7.1", default-features = false }
 reqwest = { workspace = true }
