--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,11 @@ members = [
     "llm/ollama",
     "llm/openai",
     "llm/openrouter",
+    "websearch/websearch",
+    "websearch/brave",
+    "websearch/google",
+    "websearch/serper",
+    "websearch/tavily",
 ]
 
 [profile.release]
