--- a/Makefile.toml
+++ b/Makefile.toml
@@ -13,7 +13,7 @@ args = ["test"]
 [tasks.build]
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm websearch
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -28,7 +28,7 @@ end
 [tasks.release-build]
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm websearch
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -44,7 +44,7 @@ end
 script_runner = "@duckscript"
 script = '''
 #!/bin/bash
-domains = array llm
+domains = array llm websearch
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -60,7 +60,7 @@ end
 script_runner = "@duckscript"
 script = '''
 #!/bin/bash
-domains = array llm
+domains = array llm websearch
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -75,7 +75,7 @@ end
 [tasks.wit]
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm websearch
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -91,7 +91,7 @@ end
 description = "Builds all test components with golem-cli"
 script_runner = "@duckscript"
 script = '''
-domains = array llm
+domains = array llm websearch
 
 # if there is no domain passed run for every domain
 if is_empty ${1}
@@ -137,8 +137,19 @@ script = '''
 
 is_portable = eq ${1} "--portable"
 
-targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama
-for target in ${targets}
+# LLM targets
+llm_targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama
+for target in ${llm_targets}
+    if is_portable
+        cp target/wasm32-wasip1/debug/golem_${target}.wasm components/debug/golem_${target}-portable.wasm
+    else
+        cp target/wasm32-wasip1/debug/golem_${target}.wasm components/debug/golem_${target}.wasm
+    end
+end
+
+# WebSearch targets - use correct target names that match the actual WASM files
+websearch_targets = array web_search_brave web_search_google web_search_serper web_search_tavily
+for target in ${websearch_targets}
     if is_portable
         cp target/wasm32-wasip1/debug/golem_${target}.wasm components/debug/golem_${target}-portable.wasm
     else
@@ -153,8 +164,19 @@ script = '''
 
 is_portable = eq ${1} "--portable"
 
-targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama
-for target in ${targets}
+# LLM targets
+llm_targets = array llm_openai llm_anthropic llm_grok llm_openrouter llm_ollama
+for target in ${llm_targets}
+    if is_portable
+        cp target/wasm32-wasip1/release/golem_${target}.wasm components/release/golem_${target}-portable.wasm
+    else
+        cp target/wasm32-wasip1/release/golem_${target}.wasm components/release/golem_${target}.wasm
+    end
+end
+
+# WebSearch targets
+websearch_targets = array  websearch_brave websearch_google websearch_serper websearch_tavily
+for target in ${websearch_targets}
     if is_portable
         cp target/wasm32-wasip1/release/golem_${target}.wasm components/release/golem_${target}-portable.wasm
     else
