--- a/stt/deepgram/Cargo.toml
+++ b/stt/deepgram/Cargo.toml
@@ -22,9 +22,11 @@ serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 bytes = "1.2"
+http = "=1.3.1"
+url = "2.5.4"
 
 [dev-dependencies]
-multipart = "=0.18.0"
+
 
 [package.metadata.component]
 package = "golem:stt-deepgram"
