--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -18,5 +18,6 @@ bytes = "1.2"
 reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+http = "=1.3.1"
 
 derive_more = { version = "2.0.1", features = ["from"] }
