--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -22,9 +22,11 @@ serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 bytes = "1.2"
+form-data-builder = "1.0.1"
+http = "=1.3.1"
 
 [dev-dependencies]
-multipart = "=0.18.0"
+multipart-2021 = "0.19.0"
 
 [package.metadata.component]
 package = "golem:stt-whisper"
