--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -21,8 +21,8 @@ serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
 bytes = "1.2"
-form-data-builder = "1.0.1"
 http = "=1.3.1"
+uuid = { version = "1.17.0", features = ["v4"] }
 
 [dev-dependencies]
 multipart-2021 = "0.19.0"
