--- a/stt/aws/Cargo.toml
+++ b/stt/aws/Cargo.toml
@@ -28,6 +28,10 @@ hex = "0.4.3"
 http = "=1.3.1"
 percent-encoding = "=2.3.1"
 chrono = "0.4.41"
+wasi = "0.12.1+wasi-0.2.0"
+wasi-async-runtime = "0.1.2"
+futures = { version = "0.3.31", features = [] }
+futures-concurrency = "7.6.3"
 
 [dev-dependencies]
 aws-sigv4 = "1.2.6"
