--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -23,6 +23,10 @@ derive_more = { version = "2.0.1", features = ["from"] }
 bytes = "1.2"
 http = "=1.3.1"
 uuid = { version = "1.17.0", features = ["v4"] }
+wasi-async-runtime = "0.1.2"
+futures = { version = "0.3.31", features = [] }
+futures-concurrency = "7.6.3"
+itertools = "0.14.0"
 
 [dev-dependencies]
 multipart-2021 = "0.19.0"
