--- a/stt/aws/Cargo.toml
+++ b/stt/aws/Cargo.toml
@@ -16,7 +16,6 @@ golem-stt = { workspace = true }
 
 golem-rust = { workspace = true }
 log = { workspace = true }
-reqwest = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
@@ -26,12 +25,18 @@ hmac = "0.12.1"
 sha2 = "0.10.9"
 hex = "0.4.3"
 http = "=1.3.1"
+url = "2.5.4"
 percent-encoding = "=2.3.1"
 chrono = "0.4.41"
 wasi = "0.12.1+wasi-0.2.0"
 wasi-async-runtime = "0.1.2"
 futures = { version = "0.3.31", features = [] }
 futures-concurrency = "7.6.3"
+reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-july-2025", features = [
+    "json",
+    "multipart",
+    "async",
+] }
 
 [dev-dependencies]
 aws-sigv4 = "1.2.6"
