--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -25,6 +25,7 @@ serde_json = { workspace = true }
 http = "=1.3.1"
 url = "2.5.4"
 wasi-async-runtime = "0.1.2"
+wasi = "0.12.1+wasi-0.2.0"
 futures = { version = "0.3.31", features = [] }
 futures-concurrency = "7.6.3"
 
