--- a/test/components-rust/test-websearch/Cargo.toml
+++ b/test/components-rust/test-websearch/Cargo.toml
@@ -28,14 +28,19 @@ path = "wit-generated"
 
 
 [package.metadata.component.target.dependencies]
-"golem:web-search" = { path = "wit-generated/deps/golem-websearch" }
-"test:websearch-exports" = { path = "wit-generated/deps/test_websearch-exports" }
 "wasi:io" = { path = "wit-generated/deps/io" }
 "wasi:clocks" = { path = "wit-generated/deps/clocks" }
 "golem:rpc" = { path = "wit-generated/deps/golem-rpc" }
+"golem:web-search" = { path = "wit-generated/deps/golem-websearch" }
 "test:helper-client" = { path = "wit-generated/deps/test_helper-client" }
+"test:websearch-exports" = { path = "wit-generated/deps/test_websearch-exports" }
 
 [package.metadata.component.bindings]
+
+[package.metadata.component.bindings.with]
+"wasi:io/poll@0.2.0" = "golem_rust::wasm_rpc::wasi::io::poll"
+"wasi:clocks/wall-clock@0.2.0" = "golem_rust::wasm_rpc::wasi::clocks::wall_clock"
+"golem:rpc/types@0.2.0" = "golem_rust::wasm_rpc::golem_rpc_0_2_x::types"
 # See https://github.com/bytecodealliance/cargo-component/blob/main/src/metadata.rs#L62
 # derives = ["serde::Serialize", "serde::Deserialize"]
 # generate_unused_types = true
