--- a/stt/aws/Cargo.toml
+++ b/stt/aws/Cargo.toml
@@ -20,7 +20,6 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
-bytes = "1.2"
 hmac = "0.12.1"
 sha2 = "0.10.9"
 hex = "0.4.3"
@@ -28,26 +27,9 @@ http = "=1.3.1"
 url = "2.5.4"
 percent-encoding = "=2.3.1"
 chrono = "0.4.41"
-wasi-async-runtime = "0.1.2"
-futures = { version = "0.3.31", features = [] }
+wstd = "0.5.3"
 futures-concurrency = "7.6.3"
-reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-july-2025", features = [
-    "json",
-    "multipart",
-    "async",
-] }
-# AWS Dependencies
-wasi = "0.12.1+wasi-0.2.0"
-aws-config = { version = "1.8.1", default-features = false, features = [
-    "behavior-version-latest",
-] }
-aws-types = { version = "1.3.7", default-features = false }
-aws-smithy-wasm = { version = "0.1.4", default-features = false }
-aws-smithy-types = { version = "1.3.1" }
-aws-sdk-s3 = { version = "1.96.0", default-features = false, features = [
-    "behavior-version-latest",
-] }
-aws-smithy-runtime-api = "=1.8.3"
+itertools = "0.14.0"
 
 [dev-dependencies]
 aws-sigv4 = "1.2.6"
