--- a/stt/stt/Cargo.toml
+++ b/stt/stt/Cargo.toml
@@ -14,19 +14,11 @@ crate-type = ["rlib"]
 [dependencies]
 golem-rust = { workspace = true }
 wit-bindgen = { version = "0.40.0" }
-bytes = "1.2"
-reqwest = { git = "https://github.com/golemcloud/reqwest", branch = "update-july-2025", features = [
-    "json",
-    "multipart",
-    "async",
-] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 http = "=1.3.1"
 url = "2.5.4"
 wasi-async-runtime = "0.1.2"
-wasi = "0.12.1+wasi-0.2.0"
-futures = { version = "0.3.31", features = [] }
-futures-concurrency = "7.6.3"
+wstd = "0.5.3"
 
 derive_more = { version = "2.0.1", features = ["from"] }
