--- a/stt/whisper/Cargo.toml
+++ b/stt/whisper/Cargo.toml
@@ -20,11 +20,9 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 wit-bindgen-rt = { workspace = true }
 derive_more = { version = "2.0.1", features = ["from"] }
-bytes = "1.2"
 http = "=1.3.1"
 uuid = { version = "1.17.0", features = ["v4"] }
-wasi-async-runtime = "0.1.2"
-futures = { version = "0.3.31", features = [] }
+wstd = "0.5.3"
 futures-concurrency = "7.6.3"
 itertools = "0.14.0"
 
