--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
     "graph/graph",
     "graph/arangodb",
     "graph/janusgraph",
-    "graph/neo4j"
+    "graph/neo4j",
     "search/search",
     "search/elasticsearch",
     "search/algolia",
