--- a/graph/graph/Cargo.toml
+++ b/graph/graph/Cargo.toml
@@ -15,13 +15,13 @@ crate-type = ["rlib"]
 golem-rust = { workspace = true }
 log = { workspace = true }
 serde_json = { workspace = true }
-regex = { version = "1.10" }
 mime = "0.3.17"
 nom = { version = "7.1", default-features = false }
 reqwest = { workspace = true }
 thiserror = "2.0.12"
 wasi-logger = "0.1.2"
 wit-bindgen = { version = "0.40.0" }
+regex = "1.11.1"
 
 [features]
 default = ["durability"]
